# videoplayer

./: .gitignore  AVCodecHandler.cpp  AVCodecHandler.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  README.md  TSQueue.cpp  TSQueue.h  YUVDataDefined.h  main.cpp  playerwindow.cpp  playerwindow.h  playerwindow.ui  resources.qrc
lib/SDL2/: SDL_audio.h  SDL_blendmode.h  SDL_config_iphoneos.h  SDL_config_minimal.h  SDL_config_psp.h  SDL_gesture.h  SDL_joystick.h  SDL_main.h  SDL_rwops.h  SDL_surface.h
lib/ffmpeg/include/libavcodec/: codec_par.h  packet.h
lib/ffmpeg/include/libavfilter/: avfilter.h
lib/ffmpeg/include/libavutil/: aes.h  aes_ctr.h  avstring.h  blowfish.h  bprint.h  buffer.h  camellia.h  cast5.h  channel_layout.h  des.h  dict.h  fifo.h  frame.h  hash.h  hwcontext.h  imgutils.h  md5.h  murmur3.h  opt.h  pixdesc.h  rc4.h  samplefmt.h  tea.h  twofish.h  uuid.h  xtea.h
lib/ffmpeg/include/libswscale/: swscale.h
res/: fragment.frag  vertex.vert
